--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -62,6 +62,7 @@
   <ItemGroup>
     <Compile Include="Assets\Scripts\CellChanger.cs" />
     <Compile Include="Assets\Scripts\InputManager.cs" />
+    <Compile Include="Assets\Scripts\Pointer.cs" />
     <Compile Include="Assets\Scripts\RadialMenu.cs" />
     <Compile Include="Assets\Scripts\RadialSection.cs" />
     <Compile Include="Assets\Scripts\Teleporter.cs" />
